--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ Theme Name: Borstein
   2. >>> Banner Style
   3. >>> Resume Style
   4. >>> Project Style
-  5. >>> Testimonials Style
+  5. >>> Project Showcase Style
   6. >>> Email Style
   7. >>> Footer Style
   8. >>> Project Section 1 Style
@@ -341,14 +341,14 @@ img {
 }
 
 /*-----------------------------------------------------------------
-  5. >>> Testimonials Style
+  5. >>> Project Showcase Style
 ----------------------------------------------------------------*/
-.ds-testimonials-section {
+.ds-project-showcase-section {
 	background-color: #000;
 	padding: 7.5rem 0
 }
 
-.ds-testimonials-section h2 span {
+.ds-project-showcase-section h2 span {
 	display: block;
 	font-family: 'Poppins', sans-serif;
 	text-transform: uppercase;
@@ -359,27 +359,27 @@ img {
 	margin-bottom: 2.5rem
 }
 
-.ds-testimonials-loop article {
+.ds-project-showcase-loop article {
 	color: #9C9C9C;
 	font-size: 2rem;
 	line-height: 2.8125rem
 }
 
-.ds-testimonials-loop section {
+.ds-project-showcase-loop section {
 	margin-top: 3.75rem
 }
 
-.ds-testimonials-loop section span {
+.ds-project-showcase-loop section span {
 	display: block;
 	font-size: 1rem;
 	line-height: 1.375rem
 }
 
-.ds-testimonials-loop section span.ds-name {
+.ds-project-showcase-loop section span.ds-name {
 	font-weight: 600
 }
 
-.ds-testimonials-slider .slick-arrow {
+.ds-project-showcase-slider .slick-arrow {
 	display: inline-block;
 	outline: none;
 	cursor: pointer;
@@ -399,12 +399,12 @@ img {
 	z-index: 2
 }
 
-.ds-testimonials-slider .slick-arrow:hover {
+.ds-project-showcase-slider .slick-arrow:hover {
 	color: #E6A38F;
 	border-color: #E6A38F
 }
 
-.ds-testimonials-slider .slick-arrow.slick-prev {
+.ds-project-showcase-slider .slick-arrow.slick-prev {
 	right: 4.375rem
 }
 
@@ -555,28 +555,6 @@ img {
 
 
 /* End of CSS for Code Examples Section */
-
-<style>
-  .ds-testimonials-section {
-    width: 100%;
-    overflow: hidden;
-    position: relative;
-  }
-
-  .ds-testimonials-slider {
-    display: flex;
-    transition: transform 0.5s ease;
-  }
-
-  .ds-testimonials-loop {
-    flex: 0 0 100%;
-  }
-
-  .ds-testimonials-loop img {
-    width: 100%;
-    height: auto;
-  }
-</style>
 
 
 /*-------------------------------------------------------------------------------
