Update project showcase section

--- a/main.css
+++ b/main.css
@@ -379,6 +379,14 @@ img {
 	font-weight: 600
 }
 
+.ds-project-showcase-slider div img {
+  max-width: 100%; /* Ensures the image does not exceed the width of its parent container */
+  max-height: 100%; /* Ensures the image does not exceed the height of its parent container */
+  width: auto; /* Allows the image to resize proportionally based on its width */
+  height: auto; /* Allows the image to resize proportionally based on its height */
+}
+
+
 .ds-project-showcase-slider .slick-arrow {
 	display: inline-block;
 	outline: none;
