--- a/main.css
+++ b/main.css
@@ -295,15 +295,16 @@ img {
 	margin-top: 5rem
 }
 
-.ds-projects-loop figure {
-	margin-right: 60px;
-	position: relative;
-	width: 100%;
-  height: 200px;
+.ds-projects-loop figure img.ds-image-shadow {
+  width: 100%;
+  height: 200px; /* Adjust the height as needed */
+  object-fit: cover;
+  border-radius: 8px; /* Add border-radius for rounded corners */
+  transition: transform 0.3s ease-in-out; /* Adding a smooth transition */
 }
 
 .ds-projects-loop:hover figure img.ds-image-shadow {
-	box-shadow: 20px 20px #E6A38F;
+  transform: scale(1.05); /* Enlarge image on hover */
 }
 
 .ds-link-button {
